--- a/src/App.sass
+++ b/src/App.sass
@@ -162,3 +162,26 @@ footer
         position: absolute
         bottom: 0
         padding: 20px
+
+@media (max-width: 1000px) 
+    .navbar-link
+        font-size:12px
+
+    .team-members-container
+        display: block
+        .form-member-container
+            width: 100%
+            border: 0
+            height: auto
+        .showcase-member-container
+            width: 100%
+            height: auto
+    footer
+        bottom: auto
+    .racing-teams-container
+        display: block
+        .form-container
+            width: 100%
+        .racing-teams-showcase
+            width: 100%
+            height: auto
