--- a/src/App.sass
+++ b/src/App.sass
@@ -164,8 +164,12 @@ footer
         padding: 20px
 
 @media (max-width: 1000px) 
-    .navbar-link
-        font-size:12px
+
+    nav
+        h1
+            width: 7rem
+        .navbar-link
+            font-size:12px
 
     .team-members-container
         display: block
@@ -184,4 +188,4 @@ footer
             width: 100%
         .racing-teams-showcase
             width: 100%
-            height: auto
+            height: auto    
