Last responsive style

--- a/src/App.sass
+++ b/src/App.sass
@@ -170,6 +170,8 @@ footer
             width: 7rem
         .navbar-link
             font-size:12px
+            a 
+                padding: 7px
 
     .team-members-container
         display: block
